--- a/NAPS/content.css
+++ b/NAPS/content.css
@@ -4,11 +4,84 @@
     background-color: #f2f2f2;
 }*/
 
+   
+  h1{
+  padding: 15px 0px 5px 50px;
+   
+  font-family: Arial, Helvetica, sans-serif;
+  }
+
+
+  .titlenav{
+    display: flex;
+    align-items: flex-start;
+    margin-bottom: 20px;
+  }
+
+  .titlenav a{
+    color: black;
+    text-decoration: none;
+  }
+
+  .titlenav a:not(.bold_network){
+    margin-right: 40px;
+  }
+
+
+  .titlenav button{
+    margin-left: 71%;
+  }
+
+  .bold_network{
+    font-weight:bold;
+    margin-left: 50px;
+    margin-right: 30px;
+    padding-left: 10px;
+    padding-right: 10px;
+    border-style: solid;
+    border-color: #cfa40b;
+    border-left: none;
+    border-right: none;
+    border-top: none;
+    border-width:thick;
+    padding-bottom: 8px;
+
+    
+    
+  }
+
+
+  .actionBar table{
+    width: 100%;
+    border-collapse:separate;
+    border-spacing: 0px 8px;
+  }
+
+
+  .actionBar th{
+    border: 1px solid #ddd;
+  }
+
+  .actionBar .first{
+    border-left: none;
+  }
+
+  .actionBar .last{
+    border-right: none;
+  }
+  
+
+
+/*MA PARTIE*/
+
 
 #tableau {
-  width: 97%;
+  padding-left: 50px;
+  padding-right: 50px;
+  width: 100%;
   border-collapse:separate;
   border-spacing: 0px 8px;
+  background-color: #f4f4f4;
 }
 
 
