--- a/RAND/CSS/index.css
+++ b/RAND/CSS/index.css
@@ -1,4 +1,18 @@
-.BlocRand{
+
+.btadd {
+    background-color: black;
+    color: white; 
+	 position: fixed;
+    right: 50px;
+    top: 8%; /* Pour le positionner au milieu verticalement */
+    
+}
+
+.action{
+	    display: inline-block;
+}
+
+.blocrand{
 	
 margin-left:100px;
 
@@ -7,7 +21,7 @@ margin-left:100px;
 .block{
 	width: 100%;
 	height:800px;
-	background-color:lightgrey; 
+	background-color:#e7e3e3; 
 }
 td{
 	text-align:center;
@@ -24,14 +38,15 @@ tr{
 	text-align:center;
 	margin-left:200px;
 }
-li,p{
+li{
     display: inline-block; 
+	color: black;
    
 }
 
-p{
-	margin-left:90%;
-	background-color:black;
+a{
+	color:black;
+}
 	
 }
 .menu2{
