--- a/POKE/style.css
+++ b/POKE/style.css
@@ -1,11 +1,33 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
-
-.table{
-    font-family: Inter;
+.table {
+    font-family: var(--primary-font);
     font-size: 14px;
     font-weight: 400;
     line-height: 20px;
-    max-width: 1320px;
+    width: 100%; /* Set the width to 100% */
+}
+
+.table table {
+    width: 100%;
+}
+
+
+.container {
+    width: 100%;
+    margin-right: 3%;
+}
+
+#bottom{
+    width: 100%;
+    margin-right: 6%;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+
+.tr{
+    width: 100%;
 }
 
 .table *{
@@ -13,14 +35,14 @@
     gap: 5px;
 }
 
-th svg{
+th img{
     padding-left: 10px;
     vertical-align: middle;
 }
 
 td, th{
     padding: 15px;
-    width: 350px;
+    width: 30%;
 }
 
 .table tr{
@@ -29,12 +51,12 @@ td, th{
 }
 
 .table thead{
-    background-color: #F4F4F4;
+    background-color: var(--light-grey);
     text-align: left;
 }
 
 tr:nth-child(even) {
-    background-color: #F4F4F4;
+    background-color: var(--light-grey);
 }
 
 .status{
@@ -45,25 +67,26 @@ tr:nth-child(even) {
 }
 
 .status--active{
-    background-color: #3DE35A;
+    background-color: var(--active);
 }
 
 .status--inactive{
-    background-color: #E70002;
+    background-color: var(--inactive);
+    color: var(--white);
 }
 
 .status--degraded{
-    background-color: #FFCD0B;
+    background-color: var(--degraded);
 }
 
 td:has(.button), #button-col{
-    width: 50px;
+    width: 10%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.button svg{
+.button img{
     padding: 0;
     vertical-align: middle;
 }
