--- a/RAND/CSS/regions_details.css
+++ b/RAND/CSS/regions_details.css
@@ -12,7 +12,6 @@
 
 #region_option{
     display: flex;
-    justify-content: column;
     align-items: center;
 }
 /*
@@ -30,13 +29,14 @@ Section pour les différentes informations des regions
     flex-direction: row;
     justify-content: space-between;
     flex-wrap: wrap;
+    width: 70%;
 }
 #region_info_special_wrapper{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    flex-direction: row;
-    height: 50%;
+    height: 70%;
+    width: 30%;
 }
 #region_description{
     display: flex;
@@ -62,6 +62,11 @@ Section pour les id de la navbar de l'inventaire
 #inventory_navbar_wrapper{
     display: flex;
     flex-direction: row;
+    padding-left: 1%;
+    padding-right: 1%;
+    padding-top: 2%;
+    padding-bottom: 1%;
+    border-bottom: 1px solid rgb(204, 204, 204);
 }
 
 /*
@@ -70,10 +75,16 @@ Section pour les id de l'inventaire
 #inventory_wrapper{
     display: flex;
     flex-direction: column;
+    padding-top: 1.8%;
+    background-color: var(--light-grey);
+    padding-left: 3%;
+    padding-right: 3%;
 }
 #inventory_name{
     display: flex;
     align-items: center;
+    font-size: 1.5em;
+    padding-bottom: 2%;
 }
 #pager_wrapper{
     display: flex;
@@ -90,21 +101,21 @@ Section pour la navbar de l'inventaire
 .region_info{
     display: flex;
     flex-direction: column;
-    margin: 10px;
-    padding: 10px;
+    margin: 1%;
+    padding: 1%;
     width: 20%;
 }
 .region_info_special{
     display: flex;
     flex-direction: column;
     border: 1px solid rgb(204, 204, 204);
-    padding:10px;
-    margin: 10px;
+    padding: 1%;
+    margin: 1%;
 }
 
 .region_info_text{
-    margin-top: 12px;
-    margin-left: 0px;
+    margin-top: 2%;
+    margin-left: 0;
 }
 
 .region_info_title{
@@ -129,11 +140,101 @@ Section pour la navbar de l'inventaire
     justify-content: center;
 
 }
-
-.info_state{
+.info_spec_number{
     display: flex;
-    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.5em;
+    color: rgb(203, 161, 11);
+}
+.info_spec_name{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.info_state svg{
+    width: 10%;
+    height: 10%;
+}
+#region_description dt{
+    font-size: 0.85em;
+    color: rgb(85, 85, 85);
+}
+#region_description{
     margin: 10px;
     padding: 10px;
-    width: 50%;
+    width: 20%;
+}
+#region_description dd{
+    margin-left: 0;
+    margin-top: 10px;
+}
+.info_state{
+    margin-top: 4%;
+    margin-bottom: 3%;
+}
+#region_option{
+    border: 1px solid rgb(204, 204, 204);
+    border-right: none;
+    border-left: none;
+    padding-top: 0.2%;
+    padding-bottom: 0.2%;
+}
+#refresh_button svg{
+    width: 20%;
+    height: 20%;
+}
+button{
+    border:none;
+    background-color: white;
+}
+#delete_button{
+    border-right: 1px solid rgb(204, 204, 204);
+    justify-content: center;
+    align-items: center;
+    display: flex;
+}
+#refresh_button{
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    width: 6%;
+    padding-left:1%;
+}
+#check_operationnal{
+    height: 30%;
+    width: 30%;
+}
+#gateway_navbar{
+    width: 7%;
+}
+#sites_navbar{
+    width: 4%;
+}
+#edges_navbar{
+    width: 5%;
+}
+#map_navbar{
+    width: 58%;
+}
+#search_navbar{
+    width: 20%;
+}
+tr:nth-child(even) {
+    background-color: var(--white);
+}
+th{
+    color: rgb(51, 51, 51);
+    font-weight: normal;
+    text-align: left;
+    padding: 0.9%;
+}
+td{
+    padding: 0.9%;
+    margin: 0;
+
+}
+table{
+    width: 100%;
+    border-collapse: collapse;
 }
