--- a/POKE/style.css
+++ b/POKE/style.css
@@ -1,5 +1,10 @@
-.table {
+
+body {
     font-family: var(--primary-font);
+}
+
+.table {
+    
     font-size: 14px;
     font-weight: 400;
     line-height: 20px;
@@ -89,4 +94,71 @@ td:has(.button), #button-col{
 .button img{
     padding: 0;
     vertical-align: middle;
+}
+
+.info {
+    display: flex;
+    gap: 2%;
+}
+
+.rect {
+    border: solid 2px var(--grey);
+    width: 25%;
+    padding: 30px;
+}
+
+.ininfonum {
+    font-weight: 700;
+    color: var(--header-color);
+    font-size: 34px;
+    margin: 0;
+
+}
+
+.ininfo {
+    font-size: 16px;
+    font-weight: 700;
+    margin: 5px 0 0 0;
+
+}
+
+#inventory_name {
+    font-size: 16px;
+    font-weight: 700;
+    margin-left: 15px;
+
+}
+
+#inventory {
+    margin: 15px 0;
+}
+
+#top h2 {
+    margin: 15px 0;
+}
+
+#navbar a:hover {
+    cursor: pointer;
+}
+
+#navbar ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+
+#navbar li {
+    float: left;
+}
+
+#navbar li a {
+    display: block;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+#navbar li a:hover {
+    background-color: var(--grey);
 }
