--- a/RAND/CSS/regions_details.css
+++ b/RAND/CSS/regions_details.css
@@ -2,14 +2,15 @@
     display: flex;
     flex-direction: column;
     font-size: 1em;
-    margin-left: 3%;
+    padding-left: 3%;
+    width: 100%;
+    border-top: 1px solid rgb(204, 204, 204);
 }
 #header{
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-
 #region_option{
     display: flex;
     align-items: center;
@@ -35,7 +36,7 @@ Section pour les différentes informations des regions
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    height: 70%;
+    height: 50%;
     width: 30%;
 }
 #region_description{
@@ -90,11 +91,7 @@ Section pour les id de l'inventaire
     display: flex;
     justify-content: right;
 }
-#pager{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+
 /*
 Section pour la navbar de l'inventaire
 */
@@ -109,8 +106,10 @@ Section pour la navbar de l'inventaire
     display: flex;
     flex-direction: column;
     border: 1px solid rgb(204, 204, 204);
-    padding: 1%;
+    padding-left: 6%;
     margin: 1%;
+    width: 40%;
+    justify-content: center;
 }
 
 .region_info_text{
@@ -134,9 +133,9 @@ Section pour la navbar de l'inventaire
 .info_spec{
     display: flex;
     flex-direction: column;
-    margin: 10px;
-    padding: 10px;
-    width: 50%;
+    margin: 4%;
+    padding: 2%;
+    width: 30%;
     justify-content: center;
 
 }
@@ -152,7 +151,7 @@ Section pour la navbar de l'inventaire
     justify-content: center;
     align-items: center;
 }
-.info_state svg{
+.info_state img{
     width: 10%;
     height: 10%;
 }
@@ -163,15 +162,17 @@ Section pour la navbar de l'inventaire
 #region_description{
     margin: 10px;
     padding: 10px;
-    width: 20%;
+    width: 77.5%;
 }
 #region_description dd{
     margin-left: 0;
     margin-top: 10px;
+    text-align: justify;
 }
 .info_state{
     margin-top: 4%;
     margin-bottom: 3%;
+    width: 70%;
 }
 #region_option{
     border: 1px solid rgb(204, 204, 204);
@@ -179,10 +180,6 @@ Section pour la navbar de l'inventaire
     border-left: none;
     padding-top: 0.2%;
     padding-bottom: 0.2%;
-}
-#refresh_button svg{
-    width: 20%;
-    height: 20%;
 }
 button{
     border:none;
@@ -193,6 +190,8 @@ button{
     justify-content: center;
     align-items: center;
     display: flex;
+    padding-top: 0.1%;
+    padding-bottom: 0.1%;
 }
 #refresh_button{
     justify-content: center;
@@ -200,6 +199,8 @@ button{
     display: flex;
     width: 6%;
     padding-left:1%;
+    padding-top: 0.1%;
+    padding-bottom: 0.1%;
 }
 #check_operationnal{
     height: 30%;
@@ -218,7 +219,15 @@ button{
     width: 58%;
 }
 #search_navbar{
-    width: 20%;
+    width: 16%;
+    border: none;
+}
+#filter_navbar{
+    margin-left: 2%;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    flex-flow: row;
 }
 tr:nth-child(even) {
     background-color: var(--white);
@@ -228,13 +237,62 @@ th{
     font-weight: normal;
     text-align: left;
     padding: 0.9%;
+    border-bottom: 1px solid rgb(204, 204, 204);
 }
 td{
     padding: 0.9%;
     margin: 0;
-
+    border-bottom: 1px solid rgb(204, 204, 204);
 }
 table{
     width: 100%;
     border-collapse: collapse;
+}
+#provisioning_state {
+    border: 2px solid var(--active); /* Couleur verte claire */
+    border-radius: 15px 15px 15px 15px; /* Angles arrondis */
+    padding: 0.9%; /* Ajout de marge intérieure pour l'espace autour du texte */
+    background-color: var(--active);
+    text-align: center;
+    width: 50%;
+}
+.state{
+    margin:5px ;
+}
+#close_button{
+    justify-content: center;
+    align-items: center;
+    display: flex;
+}
+#network_name{
+    text-decoration: underline;
+}
+#delete_button button{
+    color: rgb(204,204,204);
+}
+.pager {
+    display: flex;
+    justify-content: center;
+    gap: 4px;
+    height: 38px;
+}
+
+.pager a {
+    font-family: var(--primary-font) !important;
+    padding: 8px 15px;
+    border-radius: 5px;
+    color: black;
+    text-decoration: none;
+    height: 38px;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 22px;
+    text-align: center;
+
+}
+
+.pager a img {
+    padding: 0;
+    vertical-align: middle;
+    height: 12px;
 }
