--- a/4VVV/style.css
+++ b/4VVV/style.css
@@ -1,111 +1,223 @@
 body {
-    font-family: 'Roboto', sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
 .mainSection {
-    overflow: auto;
-    display : grid;
-    grid-gap : 20px;
-    grid-template-columns: 100%;
-    grid-template-rows: auto auto auto auto auto auto auto;
-    margin-right: 45px;
-    margin-left: 45px;
+  overflow: auto;
+  display : grid;
+  grid-gap : 20px;
+  grid-template-columns: 100%;
+  grid-template-rows: auto auto auto auto auto auto auto;
+  margin-left: 45px;
 }
 
+/*--------------------------------------*/
+/*DEBUT ENTETE*/
+
+#entete{
+  top: 48px;
+  gap: 0px;
+  opacity: 0px;
+}
+
+#TitreNClose{
+  display: grid;
+  grid-template-columns: 90% auto;
+  border: solid #CCCCCC 1px;
+  border-left: none;
+  border-right: none;
+  padding: 5px, 45px, 5px, 45px;
+  gap: 0px;
+  opacity: 0px;
+}
+
+#titre{
+  display: flex;
+  align-items: center;
+  padding: 15px 0px 15px 0px;
+  gap: 60px;
+  opacity: 0px;
+  padding-left: 45px;
+}
+
+#titrelabel{
+  padding: 0px 0px 5px 0px;
+  gap: 0px;
+  opacity: 0px;
+  font-size: 26px;
+  font-weight: 400;
+  line-height: 30px;
+  text-align: left;
+}
+
+#CrossGroup{
+  display: flex;
+  align-items: center;
+  padding: 7px 0px 10px 0px;
+  gap: 4px;
+  opacity: 0px;
+}
+
+#Close{
+  gap: 4px;
+  opacity: 0px;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 22px;
+  text-align: left;
+}
+
+#DeleteNRefresh{
+  display: grid;
+  grid-template-columns: auto 95%;
+  border: solid #CCCCCC 1px;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 22px;
+  text-align: left;
+  padding: 0px 45px 0px 45px;
+  gap: 0px;
+  justify-content: space-between;
+  opacity: 0px;
+}
+
+#Delete{
+  color: #CCCCCC;
+  display: flex;
+  align-items: center;
+  border: solid #CCCCCC 1px;
+  border-top: none;
+  border-left: none;
+  border-bottom: none;
+  padding: 7px 10px 10px 0px;
+  gap: 6px;
+  opacity: 0px;
+  
+}
+
+#DeleteLabel{
+  gap: 4px;
+  opacity: 0px;
+}
+
+#Refresh{
+  display: flex;
+  align-items: center;
+  padding: 7px 0px 10px 10px;
+  gap: 6px;
+  opacity: 0px;
+}
+
+#RefreshLabel{
+  gap: 4px;
+  opacity: 0px;
+}
+
+/*FIN ENTETE*/
+/*--------------------------------------*/
+/*DEBUT DONNEES*/
+
 #gridInformation{
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: auto auto;
-    grid-gap : 30px;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: auto auto;
+  grid-gap : 30px;
+  margin-right: 45px;
 }
 
 #descriptionCase{
-    grid-column: span 5;
+  grid-column: span 5;
 }
 
 .caseInfo{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    border: solid #cccccc;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  border: solid #cccccc;
+  padding-left: 45px;
+  padding-right: 45px;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 .caseGauche{
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 5px;
 }
 
 .labelInfo{
-    color: #555555;
-    font-size: 14px;
+  color: #555555;
+  font-size: 14px;
 }
 
 .textInfo{
-    font-size: 16px;
+  font-size: 16px;
 }
 
 .littletextInfo{
-    font-size: 12px;
+  font-size: 12px;
 }
 
 .case{
-    padding-left: 30px;
-    padding-right: 30px;
-    padding-top: 15px;
-    padding-bottom: 15px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+.casespe{
+  padding-left: 30px;
+  padding-right: 30px;
 }
 
 #gridInformationbis{
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
+  display: grid;
+  grid-gap: 30px;
+  grid-template-columns: repeat(4, 1fr);
+  margin-right: 45px;
 }
 
 #provisioningstate, #operationalstatus{
-    border: solid #cccccc;
+  border: solid #cccccc;
 }
 
 #opstatline{
-    display: flex;
+  display: flex;
 }
 
 #opstat{
-    margin-left: 5px;
+  margin-left: 5px;
 }
 
 #provstat{
-    background-color: #3DE35A;
-    padding-left: 15px;
-    padding-right: 15px;
-    padding-top: 1px;
-    padding-bottom: 3px;
-    border-radius: 3ch;
+  background-color: #3DE35A;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 1px;
+  padding-bottom: 3px;
+  border-radius: 3ch;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-.mainSection {
-    overflow: auto;
-    display : grid;
-    grid-gap : 20px;
-    grid-template-columns: 100%;
-    grid-template-rows: auto auto auto auto auto auto auto;
-    margin-right: 10%;
-    margin-left: 10%;
+.bignumber{
+  font-size: 34px;
+  color: #CFA40B;
 }
 
-#gridInformation{
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: auto auto;
-    grid-gap : 20px;
+.liststatus{
+  list-style: none;
+  padding: 0;
+}
+
+.list{
+  width: 100%;
+}
+
+.elementstatus{
+  display: flex;
+  gap: 10px;
+  margin-bottom: 5px;
 }
 
 #descriptionCase{
@@ -114,13 +226,35 @@ body {
 
 .tabcontent {
   display: none;
+  margin-left:45px;
+  margin-right:45px;
+}
+
+.tab{
+  border-top: 1px solid #CCCCCC;
+  background: #F4F4F4;
+  padding-bottom: 10px;
+}
+
+.tabletitle{
+  width: Fill (1,295px)px;
+  height: Hug (38px)px;
+  gap: 0px;
+  opacity: 0px;
+  font-size: 24px;
+  top: 785px;
 }
 
 .tablink {
-  background-color: #f2f2f2;
-  padding: 10px 20px;
+  background-color: white;
+  padding: 7px;
+  font-size: 16px;
   border: none;
   cursor: pointer;
+}
+
+.selectedtablink{
+  border-bottom: solid #CFA40B;
 }
 
 .tablink:hover {
@@ -129,42 +263,52 @@ body {
 
 .tabs {
   overflow: hidden;
-  border-bottom: 1px solid #ccc;
+  margin-right: 45px;
+  margin-top:45px;
 }
 
 table {
   border-collapse: collapse;
   width: 100%;
   margin-top: 20px;
+  text-align:left;
+  font-size: 14px;
+}
+
+table tr td {
+  border-top: 1px solid #CCCCCC;
+}
+
+table tr:nth-child(odd) td {
+  background-color: #FFFFFF;
 }
 
 th, td {
-  border: 1px solid black;
-  padding: 8px;
-  text-align: center;
+  padding: 15px;
+  font-weight: normal;
 }
 
-th {
-  border-width: 1px 1px 0;
-  background-color: #f7f7f7;
+
+tr img {
+  vertical-align: middle;
 }
 
-.content {
-  margin: 20px;
+.monitoring{
+  text-align: right;
 }
-
 .pagination {
-  text-align: center;
-  margin-top: 20px;
+  text-align: right;
+  margin-top: 10px;
+  gap:4px;
 }
 
 .pagination button {
   padding: 5px 10px;
   margin: 0 5px;
   cursor: pointer;
-  outline: 1px solid #494a4f;
   border-radius: 1px;
   border: none;
+  background-color: #F4F4F4;
 }
 
 .hidden {
@@ -178,11 +322,40 @@ th {
 }
 
 .pagination button.active {
-  background-color: #007bff;
-  color: white;
+  outline: 2px solid #F16E00;
 }
 
 .search{
-    float:right;
-  }
-   
+  float:right;
+  display: flex;
+  gap:25px;
+}
+
+.filterbutton{
+background-color: white;
+border: none;
+padding: 7px 0px 10px 0px;
+display: flex;
+width: 94px;
+justify-content: center;
+gap:6px;
+font-size: 16px;
+}
+
+#searchBar{
+border: none;
+width: 230px;
+font-size: 16px;
+}
+
+#searchBar::placeholder {
+color: #555555;
+}
+
+.searcharea{
+border-bottom: solid #555555;
+display: flex;
+gap: 20px;
+align-items: center;
+width: 289px;
+}
