--- a/NAPS/content.css
+++ b/NAPS/content.css
@@ -3,99 +3,121 @@
     font-family: Inter, sans-serif;
     background-color: #f2f2f2;
 }*/
-
+ 
    
-  h1{
+h1{
   padding: 15px 0px 0px 50px;
    
   font-family: Arial, Helvetica, sans-serif;
   }
 
-
-  .titlenav{
-    display: flex;
+  #titlenav{
+    width: 100%;
+    display: inline-flex;
     align-items: center;
     margin-bottom: 0px;
   }
 
-  .titlenav a{
+  #titlenav a{
     color: black;
     text-decoration: none;
   }
 
-  .titlenav a:not(.bold_network){
-    margin-right: 40px;
-  }
-
-  .nobutton{
+  #nobutton{
+    display: inline-flex;
     margin-top: 10px;
   }
 
-
-
-  .add_network{
-    margin-left: 60%;
+  #add_network{
+    margin-left: 55%;
     background: black;
     border-radius: 0px;
     color: white;
     font-size: large;
     width: 250px;
     height: 50px;
-    
-    
-    
   }
 
 
-  .bold_network{
-    font-weight:bold;
+  #bold_network{
+    padding-left: 30px;
+    padding-right: 30px;
     margin-left: 50px;
-    margin-right: 30px;
-    padding-left: 10px;
-    padding-right: 10px;
+    font-weight:bold;
     border-style: solid;
     border-color: #cfa40b;
     border-left: none;
     border-right: none;
     border-top: none;
     border-width:thick;
-    padding-bottom: 8px;
-    
-    
   }
 
-  .actionBar table{
+  .buttonlist{
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 18px;
+    padding-top: 16px;
+  }
+
+ #actionBar{
+    display: inline-flex;
     width: 100%;
-    border-collapse:separate;
-    border-spacing: 0px 0px;
-    
   }
 
-
-
-  .actionBar td{
-    
+ #actionBar .buttons {
     border: 1px solid #ddd;
-    
   }
 
-  .actionBar .first{
-    border-left: none;
+  #actionBar #provision{
+    border-left:none;
+    width: 45%;
+    height: 64px;
+    padding-left: 3%;
+    padding-right: 1%;
   }
 
-  .actionBar .last{
+  #actionBar #delete{
+    border-left:none;
+    width: 30%;
+    height: 64px;
+    padding-left: 1%;
+    padding-right: 1%;
+  }
+
+   #actionBar #refresh{
+    text-align: left;
+    border-left:none;
+    width: 60%;
+    height: 64px;
+    padding-left: 1%;
+  }
+
+ #actionBar #empty{
+    height: 62.5px;
+    width: 160%;
+  }
+
+  #actionBar input#zone_saisie {
+    width: 100%;
+    height: 62.5px;
+    padding: 0; /* Supprimer le remplissage */
+    outline : none;
+    padding-left: 10px;
+    font-size: large;
+  }
+
+  #actionBar #filter{
     border-right: none;
-  }
-
-  .actionBar .empty{
     width: 35%;
+    padding-right: 2%;
+    height: 64px;
   }
 
 
-  .actionBar button {
+ #actionBar button {
     width: 100%;
     height: 100%;
-    
+   
     font-size: large;
     padding: 0; /* Supprimer le remplissage */
     border: none; /* Supprimer la bordure */
@@ -104,35 +126,14 @@
   }
 
 
-  .actionBar button p{
-    
+ #actionBar button p{
+   
     font-size:small;
     margin : 0.5em 0;
-    
-  }
+   
+ }
 
-  .actionBar .delete{
-    color: #dcdcdc;
-  }
-
-
-  .actionBar .refresh{
-    text-align: left;
-    margin-left: 10px;
-    margin-top: 5px;
-    
-  }
-  
-  .actionBar input.zone_saisie {
-    width: 80%;
-    height: 100%;
-    padding: 0; /* Supprimer le remplissage */
-    border: none; /* Supprimer la bordure */
-    padding-left: 10px;
-    font-size: large;
-  }
-
-  .actionBar img{
+ #actionBar img{
     margin-right: 10px;
   }
 
@@ -191,6 +192,7 @@
     padding-left: 13px;
     padding-top: 1px;
 }
+
 .inactive {
     color: grey;}
 
@@ -315,6 +317,38 @@ border-width: 0 3px 3px 0;
 -webkit-transform: rotate(45deg);
 -ms-transform: rotate(45deg);
 transform: rotate(45deg);
+}
+
+
+
+#action_panel{
+  
+
+  background-color: white;
+  border: #f16e00;
+  border-style: solid;
+  border-width: 5px;
+  width: 10%;
+
+  z-index: 10;
+  position: absolute;
+
+  border-left: none;
+  border-right: none;
+  border-bottom: none;
+  box-shadow: 0px 0px 3px gray;
+
+  font-size:small;
+  letter-spacing: 0.5px;
+
+  padding-right: 3px;
+  padding-left: 15px;
+  padding-top: 10px;
+  padding-bottom: 5px;
+  margin-bottom: 5px;
+
+  display: none;
+
 }
 
 
