--- a/POKE/style.css
+++ b/POKE/style.css
@@ -49,8 +49,7 @@ th img {
     vertical-align: middle;
 }
 
-td,
-th {
+td, th {
     padding: 15px;
     width: 30%;
 }
@@ -240,11 +239,11 @@ td:has(.button),
     border-radius: 5px;
     color: black;
     text-decoration: none;
-    height: 38px;
     font-size: 16px;
     font-weight: 400;
     line-height: 22px;
     text-align: center;
+    border: transparent 2px;
 
 }
 
@@ -252,6 +251,12 @@ td:has(.button),
     padding: 0;
     vertical-align: middle;
     height: 12px;
+}
+
+#current_page {
+    font-weight: 700;
+    border: solid 2px var(--orange);
+    border-radius: 0%;
 }
 
 .line_select {
@@ -324,12 +329,30 @@ td:has(.button),
         gap: 2%;
     }
 
+    .edges, .button, .status {
+        display: none;
+    }
+
+    .name {
+        width: 100%;
+    }
+
+    .select-entries {
+        display: none;
+    }
+
+    .table-navigation{
+        display: block;
+    }
+
+    #top, #bottom{
+        padding: 0 5% 0 2%;
+    }
     .rect {
         border: solid 2px var(--grey);
-        width: 70%;
+        width: calc(100% - 60px);
         padding: 30px;
         margin-bottom: 10px;
-        margin-left: 15%;
     }
 
     #navbar ul {
@@ -365,5 +388,9 @@ td:has(.button),
         font-weight: 700;
         font-size: 16px;
         margin-left: 25px;
+    }
+
+    #filtre {
+        display: none !important;
     }
 }
