--- a/HELP/css/style.css
+++ b/HELP/css/style.css
@@ -73,11 +73,34 @@ nav a {
   transition: background-color 0.3s;
 }
 
-@media screen and (min-width: 400px) {
+@media only screen and (max-width: 500px) /* AFFICHAGE TELEPHONE */
+{
+  #logo-desktop
+  {
+    display:none;
+  }
+  #logo-display {
+    display: flex;
+  }
+  #bottom-bar
+  {
+    display: none;
+  }
+}
+
+@media only screen and (min-width: 501px) /* AFFICHAGE DESKTOP */
+{
   #content {
     display: flex;
     margin-left: 3%;
   }
+  #logo-phone{
+    display:none;
+  }
+  #logo-desktop{
+    display:flex;
+  }
+
 }
 
 /* Navbar container */
@@ -119,6 +142,10 @@ nav a {
   color: black;
 }
 
+#logo:hover
+{
+  background: var(--primary-color);
+}
 
 /* Dropdown content (hidden by default) */
 .dropdown-content {
