Navbar responsive + couleur bottom bar corrigée

--- a/HELP/css/style.css
+++ b/HELP/css/style.css
@@ -57,7 +57,7 @@ body {
   font-size: 14px;
   display: flex;
   align-items: center;
-  background-color: var(--light-grey);
+  background-color: var(--white);
 }
 
 nav {
