--- a/RAND/CSS/index.css
+++ b/RAND/CSS/index.css
@@ -5,42 +5,107 @@
     background-color: black;
     color: white; 
 	padding:10px;
-	display: inline-block;
+	
     
 }
-
-
-
-.action{
-	    display: inline-block;
-		width:10%
-}
-.ref{
-	display: inline-block;
-	width:10%;
-}
-.void{
-	display:inline-block;
-	width:50%;
-}
-.se{
-	display: inline-block;
-	width:20%;
-}
-.fi{
-	display: inline-block;
+.oui{
 	
+	display: flex;
+      justify-content: flex-end;
+   
+}
+ul{
+	float:left;
+	margin-left:55px;
+}
+
+h1{
+	border-top: 1px solid black;
+	margin-left:55px;
+}
+body{
+margin-left:50px;
+}
+.menu2 {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      background-color: #f8f8f8;
+      padding: 10px 20px;
+      border-bottom: 1px solid #ddd;
+	  margin-left:50px;
+    }
+    .menu2 .left, .menu2 .right {
+      display: flex;
+      align-items: center;
+    }
+    .menu2 .left > div, .menu2 .right > div {
+      margin-right: 20px;
+      display: flex;
+      align-items: center;
+    }
+    .menu2 .left > div:last-child, .menu2 .right > div:last-child {
+      margin-right: 0;
+    }
+    .menu2 .action {
+      cursor: pointer;
+      padding: 5px 10px;
+      border: 1px solid #ddd;
+      border: none;
+      background-color: #fff;
+      display: inline;
+      align-items: center;
+	  width:100%
+    }
+    .menu2 .action:hover {
+      background-color: #eee;
+    }
+    .menu2 .icon {
+      margin-right: 5px;
+    }
+    .menu2 .se {
+      float: right;
+	padding: 6px;
+	border: none;
+	margin-top: 8px;
+	margin-right: 16px;
+	font-size: 17px;
+	width:100%;
+    }
+	.menu2 .search{
+		border:none;
+	}
+    .menu2 .search-button {
+      cursor: pointer;
+      padding: 5px;
+      border: none;
+      background: none;
+      display: flex;
+      align-items: center;
+
+    }
+    .menu2 .search-button:hover {
+      color: #f90;
+    }
+
+	
+}
+.menu2 .btnFiltre{
+	border: none;
 }
 .blocrand{
 	
-margin-left:100px;
+margin-left:55px;
 
 }
+
+
 
 .block{
 	width: 100%;
 	height:800px;
 	background-color:#e7e3e3; 
+	margin-left:50px;
 }
 td{
 	text-align:center;
@@ -60,11 +125,129 @@ tr{
 li{
     display: inline-block; 
 	color: black;
+	
    
 }
 
 a{
 	color:black;
+}
+
+#top-bar {
+  background-color: var(--primary-color);
+  color: var(--white);
+  padding: 10px 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#bottom-bar
+{
+  padding: 10px 20px;
+  font-size: 14px;
+  display: flex;
+  align-items: center;
+  background-color: var(--light-grey);
+}
+
+nav {
+  display: flex;
+  gap: 20px;
+}
+
+nav a {
+  color: white;
+  text-decoration: none;
+  padding: 8px 15px;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+}
+
+@media screen and (min-width: 400px) {
+  #content {
+    display: flex;
+    margin-left: 3%;
+  }
+}
+
+/* Navbar container */
+.navbar {
+  overflow: hidden;
+}
+
+/* Links inside the navbar */
+.navbar a {
+  float: left;
+  font-size: 16px;
+  color: var(--white);
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* The dropdown container */
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+/* Dropdown button */
+.dropdown .dropbtn {
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: var(--white);
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+/* Add a golden background color to navbar links on hover */
+.navbar a:hover, .dropdown:hover .dropbtn {
+  background-color: var(--orange);
+  color: black;
+}
+
+
+/* Dropdown content (hidden by default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: var(--light-grey);
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  float: none;
+  color: var(--text-color);
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+/* Add a grey background color to dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #ddd;
+
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.fa-caret-down {
+  color: var(--orange);
+}
+
+.dropdown:hover .img .fa-caret-down {
+
 }
 	
 }
