--- a/4VVV/style.css
+++ b/4VVV/style.css
@@ -386,7 +386,6 @@ width: 289px;
   height: 18px;
 }
 
-
 @media (min-width: 1188px) and (max-width: 1880px) {  
   .caseinfo{
     padding-left: 15px;
@@ -410,9 +409,45 @@ width: 289px;
   }
 }
 
+@media (max-width: 992px){
+  #gridinformation{
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  #descriptioncase{
+    grid-column: span 3;
+  }
+}
+
 @media (max-width: 716px) {
   #gridinformationbis{
     grid-template-columns: 1fr;
+  }
+}
+
+@media (max-width: 550px){
+  #gridinformation{
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  #descriptioncase{
+    grid-column: span 2;
+  }
+}
+
+@media (max-width: 435px){
+  #gridinformation{
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 10px;
+  }
+
+  #descriptioncase{
+    grid-column: span 1;
+  }
+
+  .casespe{
+    padding-left: 10px;
+    padding-right: 10px;
   }
 }
 
@@ -422,3 +457,45 @@ width: 289px;
   }
 }
 
+@media (max-width: 865px) {
+  .search{
+    display: none;
+  }
+}
+
+@media (max-width: 700px) {
+  #tab2 th:nth-child(2),
+  #tab2 td:nth-child(2),
+  #tab2 th:nth-child(3),
+  #tab2 td:nth-child(3),
+  #tab3 th:nth-child(2),
+  #tab3 td:nth-child(2),
+  #tab3 th:nth-child(4),
+  #tab3 td:nth-child(4),
+  #tab4 th:nth-child(2),
+  #tab4 td:nth-child(2),
+  #tab4 th:nth-child(4),
+  #tab4 td:nth-child(4),
+  #tab4 th:nth-child(3),
+  #tab4 td:nth-child(3) {
+    display: none;
+  }
+
+}
+
+@media (max-width: 500px) {
+  td img[src="../HELP/icone/rond_vert.svg"],
+  td img[src="../HELP/icone/rond_orange.svg"] {
+    display: inline-block;
+  }
+  td span {
+    display: none;
+  }
+  .tabcontent {
+    margin:0;
+  }
+
+  .pagination {
+    text-align:justify;
+  }
+}
