--- a/POKE/style.css
+++ b/POKE/style.css
@@ -280,7 +280,7 @@ td:has(.location_button), #button-col {
 
 #search_container {
     display: flex;
-    width: auto;
+    width : auto;
     margin-left : auto;
 }
 
@@ -372,15 +372,18 @@ td:has(.location_button), #button-col {
     }
 
     #top, #bottom{
-        padding: 0 5% 0 2%;
+        padding: 0 5%;
     }
     .rect {
         border: solid 2px var(--grey);
-        width: calc(100% - 60px);
+        width: calc(90% - 60px);
         padding: 30px;
-        margin-bottom: 10px;
+        margin: auto auto 10px auto;
     }
 
+    #navbar {
+        display : block;
+    }
     
     #navbar ul {
         list-style-type: none;
@@ -388,6 +391,8 @@ td:has(.location_button), #button-col {
         padding: 0;
         overflow: hidden;
         display: block;
+        width : 90%;
+        margin : auto;
     }
 
     #navbar li {
@@ -402,10 +407,9 @@ td:has(.location_button), #button-col {
 
     #search_container {
         float: none;
-        height: 55px;
         display: block;
         flex-direction: none;
-        margin-top : 20px;
+        margin-top : 25px;
     }
 
     #search_container>div {
