--- a/RAND/CSS/index.css
+++ b/RAND/CSS/index.css
@@ -12,6 +12,7 @@
 	
 	display: flex;
       justify-content: flex-end;
+	  margin-right : 50px;
    
 }
 ul{
@@ -24,20 +25,35 @@ h1{
 	margin-left:55px;
 }
 body{
-margin-left:50px;
+margin-left:100px;
+
+}
+
+.refe {
+	border:none;
+}
+
+.btnFiltre{
+	border:none;
+}
+
+.btnAction{
+	border:none;
 }
 .menu2 {
       display: flex;
       align-items: center;
       justify-content: space-between;
       background-color: #f8f8f8;
-      padding: 10px 20px;
-      border-bottom: 1px solid #ddd;
-	  margin-left:50px;
+      border-top: 2px solid #ddd;
+	  margin-left:55px;
     }
     .menu2 .left, .menu2 .right {
       display: flex;
       align-items: center;
+	  border-right: 2px solid #ddd;
+	  border-left: 2px solid #ddd;
+	  height:100%;
     }
     .menu2 .left > div, .menu2 .right > div {
       margin-right: 20px;
@@ -52,10 +68,10 @@ margin-left:50px;
       padding: 5px 10px;
       border: 1px solid #ddd;
       border: none;
-      background-color: #fff;
       display: inline;
       align-items: center;
-	  width:100%
+	   border-right: 2px solid #ddd;
+	  
     }
     .menu2 .action:hover {
       background-color: #eee;
@@ -70,7 +86,8 @@ margin-left:50px;
 	margin-top: 8px;
 	margin-right: 16px;
 	font-size: 17px;
-	width:100%;
+	border-right: 2px solid #ddd;
+	
     }
 	.menu2 .search{
 		border:none;
@@ -92,6 +109,7 @@ margin-left:50px;
 }
 .menu2 .btnFiltre{
 	border: none;
+	border-left: 2px solid #ddd;
 }
 .blocrand{
 	
@@ -102,10 +120,9 @@ margin-left:55px;
 
 
 .block{
-	width: 100%;
 	height:800px;
 	background-color:#e7e3e3; 
-	margin-left:50px;
+	margin-left:55px;
 }
 td{
 	text-align:center;
@@ -153,7 +170,6 @@ a{
 
 nav {
   display: flex;
-  gap: 20px;
 }
 
 nav a {
