RAND : update pager for region_details

--- a/RAND/CSS/regions_details.css
+++ b/RAND/CSS/regions_details.css
@@ -84,6 +84,7 @@ Section pour les id de l'inventaire
 #pager_wrapper{
     display: flex;
     justify-content: right;
+    padding-top: 5%;
 }
 
 /*
