--- a/RAND/CSS/index.css
+++ b/RAND/CSS/index.css
@@ -25,17 +25,37 @@ h1{
 	margin-left:55px;
 	font-weight:normal;
 }
-body{
-margin-left:100px;
-
+span{
+	font-weight:normal;
 }
 
+.active{
+	background-color:#7CFC00;
+	display: inline-block;
+    padding: 5px 20px;
+	border-radius: 20px;
+}
+.inactive{
+	color:white;
+	background-color:black;
+	display: inline-block;
+    padding: 5px 20px;
+	border-radius: 20px;
+	
+}
+.draft{
+	background-color:#F0F8FF;
+	display: inline-block;
+    padding: 5px 20px;
+	border-radius: 20px;
+}
 .refe {
 	border:none;
 }
 
-.btnFiltre{
+.dropbtna{
 	border:none;
+
 }
 
 .btnAction{
@@ -74,6 +94,15 @@ margin-left:100px;
 	   border-right: 2px solid #ddd;
 	  
     }
+	.link{
+		border:none;
+		text-decoration: none;
+		font-size:40px;
+		background-color:white
+	}
+	.thead{
+		margin-left:500px;
+	}
     .menu2 .action:hover {
       background-color: #eee;
     }
@@ -81,7 +110,7 @@ margin-left:100px;
       margin-right: 5px;
     }
     .menu2 .se {
-      float: right;
+    float: right;
 	padding: 6px;
 	border: none;
 	margin-top: 8px;
@@ -92,6 +121,7 @@ margin-left:100px;
     }
 	.menu2 .search{
 		border:none;
+		
 	}
     .menu2 .search-button {
       cursor: pointer;
@@ -111,11 +141,6 @@ margin-left:100px;
 .menu2 .btnFiltre{
 	border: none;
 	border-left: 2px solid #ddd;
-}
-.blocrand{
-	
-margin-left:55px;
-
 }
 
 
@@ -143,6 +168,8 @@ tr{
 li{
     display: inline-block; 
 	color: black;
+	text-decoration:none;
+	padding:10px;
 	
    
 }
@@ -167,6 +194,7 @@ a{
   display: flex;
   align-items: center;
   background-color: var(--light-grey);
+  margin-left:55px;
 }
 
 nav {
