--- a/RAND/CSS/index.css
+++ b/RAND/CSS/index.css
@@ -267,5 +267,35 @@ nav a {
 
 }
 	
+@media screen and (max-width: 600px){ 
+
+  .blocrand{
+    margin-left: 0px;
+  }
+
+  .menu1 ul{
+    margin-left: 0;
+    margin-top: 25px;
+    padding-left: 15px;
+  }
+
+  .oui{
+    margin: 0 15px 15px 0;
+  }
+
+  .oui p p{
+    display: none;
+  }
+
+  .block, .menu2{
+    margin-left: 0px;
+    font-size: 10px;
+    overflow: auto;
+  }
+
+  .menu2 .se input{
+    width: 6em;
+  }
+
 }
 
