--- a/RAND/CSS/index.css
+++ b/RAND/CSS/index.css
@@ -64,6 +64,7 @@
     margin-right: 4%;
     margin-bottom: 0;
     white-space: nowrap;
+    cursor: pointer;
 }
 #add_region_text{
     margin-left: 5%;
@@ -223,4 +224,32 @@ td{
     color: var(--white);
     text-align: center;
     width: 50%;
+}
+#action_navbar_wrapper img{
+    cursor: pointer;
+}
+
+@media screen and (max-width: 600px) {
+    #page{
+        font-size: 1.5em;
+    }
+
+    .table_responsive{
+        display:none;
+    }
+
+    #action_navbar_wrapper{
+        flex-direction: column;
+        font-size: 1.5em;
+
+    }
+    #search{
+        margin-left: 0;
+    }
+    .img_responsive{
+        height: 30px;
+    }
+    #table_wrapper{
+        padding-right: 7%;
+    }
 }
